Fixed SecurityConfig allowedOrigins bug and removed WebConfig CORS conflict